--- a/index.html
+++ b/index.html
@@ -12,8 +12,95 @@
 	<input type="button" onclick="gol.pause()" value="Pause">
 <script type="text/javascript">
 	gol.init(20, 20, 100, 'container', 'genCount');
-	gol.setT0(['5.5','5.6','5.7']);
-	//gol.randomizeT0(50);
+
+	//gosper glider gun setup
+	//gol.setT0(['5.1','6.2','6.1', '5.2']);
+	//gol.setT0(['3.35','4.35','3.36', '4.36']);
+	//gol.setT0(
+	//	['5.9','6.9','7.9','8.10','4.10', '9.12', '9.11', '3.12', '3.11', '6.13', '4.14', '8.14', '7.15', '6.15', '5.15', '6.16']
+	//);
+	//gol.setT0(
+	//	['1.23', '2.21', '2.23', '3.19', '3.20', '4.19', '4.20', '5.19', '5.20', '6.21', '6.23', '7.23']
+	//);
+	///////////////////////
+
+	//toad pattern
+	//gol.setT0(['3.4','3.5','3.6', '4.3', '4.4', '4.5']);
+
+	//wave
+	//gol.setT0(['2.0', '3.1', '4.2', '5.3', '6.4','7.5', '7.6', '6.7', '5.8', '4.9', '3.10', '2.11', '3.12', '4.13', '5.14', '6.15', '7.16', '6.17', '5.18', '4.19']);
+	//gol.setT0(['5.0', '6.1', '7.2', '8.3', '9.4','10.5', '10.6', '9.7', '8.8', '7.9', '6.10', '5.11', '6.12', '7.13', '8.14', '9.15', '10.16', '9.17', '8.18', '7.19']);
+	//gol.setT0(['9.0', '10.1', '11.2', '12.3', '13.4','14.5', '14.6', '13.7', '12.8', '11.9', '10.10', '9.11', '10.12', '11.13', '12.14', '13.15', '14.16', '13.17', '12.18', '11.19']);
+	//gol.setT0(['12.0', '13.1', '14.2', '15.3', '16.4','17.5', '17.6', '16.7', '15.8', '14.9', '13.10', '12.11', '13.12', '14.13', '15.14', '16.15', '17.16', '16.17', '15.18', '14.19']);
+	//gol.setT0(['19.0', '19.1', '19.2', '19.3', '19.4', '19.5', '19.6', '19.7', '19.8', '19.9', '19.10', '19.11', '19.12', '19.13', '19.14', '19.15', '19.16', '19.17', '19.18', '19.19']);
+	//gol.setT0(['0.0', '0.1', '0.2', '0.3', '0.4', '0.5', '0.6', '0.7', '0.8', '0.9', '0.10', '0.11', '0.12', '0.13', '0.14', '0.15', '0.16', '0.17', '0.18', '0.19']);
+
+	//cradle corners
+	//top-left
+	/*
+	gol.setT0(['0.1', '0.3', '0.5', '0.7', '0.9']);
+	gol.setT0(['1.0', '1.2', '1.4', '1.6', '1.8']);
+	gol.setT0(['2.1', '2.3', '2.5', '2.7']);
+	gol.setT0(['3.0', '3.2', '3.4', '3.6']);
+	gol.setT0(['4.1', '4.3', '4.5']);
+	gol.setT0(['5.0', '5.2', '5.4']);
+	gol.setT0(['6.1', '6.3']);
+	gol.setT0(['7.0', '7.2']);
+	gol.setT0(['8.1']);
+	gol.setT0(['9.0']);
+
+	//bottom-right
+	gol.setT0(['19.18', '19.16', '19.14', '19.12', '19.10']);
+	gol.setT0(['18.19', '18.17', '18.15', '18.13', '18.11']);
+	gol.setT0(['17.18', '17.16', '17.14', '17.12']);
+	gol.setT0(['16.19', '16.17', '16.15', '16.13']);
+	gol.setT0(['15.18', '15.16', '15.14']);
+	gol.setT0(['14.19', '14.17', '14.15']);
+	gol.setT0(['13.18', '13.16']);
+	gol.setT0(['12.19', '12.17']);
+	gol.setT0(['11.18']);
+	gol.setT0(['10.19']);
+	//top-right
+	gol.setT0(['0.18', '0.16', '0.14', '0.12', '0.10']);
+	gol.setT0(['1.19', '1.17', '1.15', '1.13', '1.11']);
+	gol.setT0(['2.18', '2.16', '2.14', '2.12']);
+	gol.setT0(['3.19', '3.17', '3.15', '3.13']);
+	gol.setT0(['4.18', '4.16', '4.14']);
+	gol.setT0(['5.19', '5.17', '5.15']);
+	gol.setT0(['6.18', '6.16']);
+	gol.setT0(['7.19', '7.17']);
+	gol.setT0(['8.18']);
+	gol.setT0(['9.19']);
+
+	//bottom-left
+	gol.setT0(['19.1', '19.3', '19.5', '19.7', '19.9']);
+	gol.setT0(['18.0', '18.2', '18.4', '18.6', '18.8']);
+	gol.setT0(['17.1', '17.3', '17.5', '17.7']);
+	gol.setT0(['16.0', '16.2', '16.4', '16.6']);
+	gol.setT0(['15.1', '15.3', '15.5']);
+	gol.setT0(['14.0', '14.2', '14.4']);
+	gol.setT0(['13.1', '13.3']);
+	gol.setT0(['12.0', '12.2']);
+	gol.setT0(['11.1']);
+	gol.setT0(['10.0']);
+	//center
+	gol.setT0(['9.9', '9.10', '10.9', '10.10']);
+	*/
+	//////////////////////////////////////////
+	
+	
+	gol.setT0(['0.1', '0.3', '0.5', '0.7', '0.9']);
+	gol.setT0(['1.0', '1.2', '1.4', '1.6', '1.8']);
+	gol.setT0(['2.1', '2.3', '2.5', '2.7']);
+	gol.setT0(['3.0', '3.2', '3.4', '3.6']);
+	gol.setT0(['4.1', '4.3', '4.5']);
+	gol.setT0(['5.0', '5.2', '5.4']);
+	gol.setT0(['6.1', '6.3']);
+	gol.setT0(['7.0', '7.2']);
+	gol.setT0(['8.1']);
+	gol.setT0(['9.0']);
+
+	//gol.randomizeT0(10);
 </script>
 </body>
 </html>
