--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<input type="button" onclick="gol.launchTime()" value="Start">
 	<input type="button" onclick="gol.pause()" value="Pause">
 <script type="text/javascript">
-	gol.init(20, 20, 100, 'container', 'genCount');
+	gol.init(21, 21, 100, 'container', 'genCount');
 
 	//gosper glider gun setup
 	//gol.setT0(['5.1','6.2','6.1', '5.2']);
@@ -49,6 +49,18 @@
 	gol.setT0(['8.1']);
 	gol.setT0(['9.0']);
 
+	//bottom-left
+	
+	gol.setT0(['19.1', '19.3', '19.5', '19.7', '19.9']);
+	gol.setT0(['18.0', '18.2', '18.4', '18.6', '18.8']);
+	gol.setT0(['17.1', '17.3', '17.5', '17.7']);
+	gol.setT0(['16.0', '16.2', '16.4', '16.6']);
+	gol.setT0(['15.1', '15.3', '15.5']);
+	gol.setT0(['14.0', '14.2', '14.4']);
+	gol.setT0(['13.1', '13.3']);
+	gol.setT0(['12.0', '12.2']);
+	gol.setT0(['11.1']);
+	gol.setT0(['10.0']);
 	//bottom-right
 	gol.setT0(['19.18', '19.16', '19.14', '19.12', '19.10']);
 	gol.setT0(['18.19', '18.17', '18.15', '18.13', '18.11']);
@@ -60,6 +72,8 @@
 	gol.setT0(['12.19', '12.17']);
 	gol.setT0(['11.18']);
 	gol.setT0(['10.19']);
+
+
 	//top-right
 	gol.setT0(['0.18', '0.16', '0.14', '0.12', '0.10']);
 	gol.setT0(['1.19', '1.17', '1.15', '1.13', '1.11']);
@@ -71,36 +85,27 @@
 	gol.setT0(['7.19', '7.17']);
 	gol.setT0(['8.18']);
 	gol.setT0(['9.19']);
+	//////////////////////////////////////////
 
-	//bottom-left
-	gol.setT0(['19.1', '19.3', '19.5', '19.7', '19.9']);
-	gol.setT0(['18.0', '18.2', '18.4', '18.6', '18.8']);
-	gol.setT0(['17.1', '17.3', '17.5', '17.7']);
-	gol.setT0(['16.0', '16.2', '16.4', '16.6']);
-	gol.setT0(['15.1', '15.3', '15.5']);
-	gol.setT0(['14.0', '14.2', '14.4']);
-	gol.setT0(['13.1', '13.3']);
-	gol.setT0(['12.0', '12.2']);
-	gol.setT0(['11.1']);
-	gol.setT0(['10.0']);
 	//center
 	gol.setT0(['9.9', '9.10', '10.9', '10.10']);
-	*/
-	//////////////////////////////////////////
-	
-	
-	gol.setT0(['0.1', '0.3', '0.5', '0.7', '0.9']);
-	gol.setT0(['1.0', '1.2', '1.4', '1.6', '1.8']);
-	gol.setT0(['2.1', '2.3', '2.5', '2.7']);
-	gol.setT0(['3.0', '3.2', '3.4', '3.6']);
-	gol.setT0(['4.1', '4.3', '4.5']);
-	gol.setT0(['5.0', '5.2', '5.4']);
-	gol.setT0(['6.1', '6.3']);
-	gol.setT0(['7.0', '7.2']);
-	gol.setT0(['8.1']);
-	gol.setT0(['9.0']);
 
-	//gol.randomizeT0(10);
+	gol.randomizeT0(100);*/
+
+	// glider + spaceship
+	//gol.setT0(['2.3', '3.4', '4.2', '4.3', '4.4']);
+	//gol.setT0(['9.1', '9.4', '10.5', '11.1', '11.5', '12.2', '12.3', '12.4', '12.5']);
+
+	//supernova
+	gol.setT0(['9.10', '11.10', '10.8', '10.9', '10.11', '10.12']);
+	gol.setT0(['9.16', '10.15', '10.17', '11.16']);
+	gol.setT0(['9.4', '10.3', '10.5', '11.4']);
+	//gol.setT0(['4.9', '4.11', '3.10', '5.10']);
+	//gol.setT0(['16.9', '16.11', '15.10', '17.10']);
+	gol.setT0(['0.9', '0.11', '0.10', '1.9', '1.11']);
+	//gol.setT0(['9.0', '11.0', '10.0', '9.1', '11.1']);
+	gol.setT0(['20.9', '20.11', '20.10', '19.9', '19.11']);
+	//gol.setT0(['9.20', '11.20', '10.20', '9.19', '11.19']);
 </script>
 </body>
 </html>
